<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mad.utsstudcentre.Controller.CentreFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/centre_greeting"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/final_type_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Enquiry Type"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/centre_01_layout"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/btn_centre_bg"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/centre_1_name"
                android:textAlignment="center"
                android:textColor="@color/btn_centre_txt"
                android:textSize="19sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/waiting"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/waiting_bd5_tv"
                        android:layout_width="0dp"
                        android:layout_marginRight="10sp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="10 people"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/est_time"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/est_bd5_tv"
                        android:layout_width="0dp"
                        android:layout_marginRight="10sp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="60 min"/>


                </TableRow>

            </TableLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:text="Book Here"
                android:textAlignment="center"
                android:textSize="17sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/centre_02_layout"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/btn_centre_bg"
            android:clickable="true"
            android:orientation="vertical"
            android:textColor="@color/btn_centre_txt">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/centre_2_name"
                android:textAlignment="center"
                android:textColor="@color/btn_centre_txt"
                android:textSize="19sp" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/waiting"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/waiting_bd10_tv"
                        android:layout_width="0dp"
                        android:layout_marginRight="10sp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="10 people"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/est_time"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/est_bd10_tv"
                        android:layout_width="0dp"
                        android:layout_marginRight="10sp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="60 min"/>


                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:text="Book Here"
                android:textAlignment="center"
                android:textSize="17sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
